@@ -46,6 +46,8 @@ Build
   uninstalling pip (rather than failing) if the user has updated pip to a
   different version from the one bundled with ensurepip.
 
+- Issue #20465: Update OS X installer build to use SQLite 3.8.0.1.
+
 Tools/Demos
 -----------
 
